--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ django-crispy-forms==1.11.0
 django-phonenumber-field==5.1.0
 django-user-visit==0.4.1
 django-uuslug==1.2.0
+folium==0.12.1
+geoip2==4.2.0
+geopy==2.1.0
 phonenumbers==8.12.23
 Pillow==8.1.0
 python-slugify==5.0.2
